restore: restore old test DataretrieveerTest and modify each method